메인화면 종족전별로 폰트색상 변경
상대 종족에 맞춰서 컬러 적용했음

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -128,6 +128,15 @@ a, a:focus, a:hover {
 .sc-menu-link--protoss {
     color: #ffff00;
 }
+.sc-title-clip--vsT {
+    color: #00ffff;
+}
+.sc-title-clip--vsZ {
+    color: #ea40f7;
+}
+.sc-title-clip--vsP {
+    color: #ffff00;
+}
 input {
     height: 50px;
     border: none;
