무한스크롤 모드 없앰.
예전 기본모드로 롤백. ai터미널만 유지.
게시물 슬라이드 기능 정상 구현됨.
댓글창 안에 글씨 안보여서 흰색으로 나오게 수정.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -506,8 +506,8 @@ textarea.cke_source {
     padding-right: 2rem;
 }
 
-.sc-title-cell:hover .sc-title-slide,
-.boardList .title:hover .sc-title-slide {
+.sc-title-cell.is-overflowing:hover .sc-title-slide,
+.boardList .title.is-overflowing:hover .sc-title-slide {
     width: max-content;
     max-width: none;
     overflow: visible;
@@ -540,8 +540,8 @@ textarea.cke_source {
 }
 
 @media (prefers-reduced-motion: reduce) {
-    .sc-title-cell:hover .sc-title-slide,
-    .boardList .title:hover .sc-title-slide {
+    .sc-title-cell.is-overflowing:hover .sc-title-slide,
+    .boardList .title.is-overflowing:hover .sc-title-slide {
         animation: none;
         transform: none;
     }
