--- a/src/main/resources/static/css/readPost.css
+++ b/src/main/resources/static/css/readPost.css
@@ -46,4 +46,6 @@
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.35);
     padding: 10px;
+    color: #ffffff;
+    caret-color: #ffffff;
 }
