AI검색 최근 검색어 표시 기능 추가.
터미널 위에 최근 검색어 및 질문 5개 표시하는 기능 추가.
이전에 AI답변에 관련 게시물 링크 기능이 누락되서 다시 복구시켰음.

--- a/src/main/webapp/WEB-INF/views/include/footer.jspf
+++ b/src/main/webapp/WEB-INF/views/include/footer.jspf
@@ -30,8 +30,9 @@
 
 <div class="container">
 	    <div class="row">
-	        <div class="col-sm-12">
+        <div class="col-sm-12">
                 <div class="sc-terminal-wrap">
+                    <%@include file="./latestSearches.jspf" %>
                     <div class="sc-terminal__notice">단축키사용(ALT+단축키) &nbsp  게시물이동(초기화면 숫자입력) &nbsp AI사용(검색어 및 질문입력)</div>
                     <div id="scTerminal" class="sc-terminal is-collapsed" aria-label="SC1Hub Terminal">
                         <div id="scTerminalOutput" class="sc-terminal__output" aria-live="polite"></div>
