--- a/src/main/resources/static/css/sc1hub-layout.css
+++ b/src/main/resources/static/css/sc1hub-layout.css
@@ -142,6 +142,18 @@ body {
         max-width: 100%;
     }
 }
+@media (min-width: 769px) and (max-width: 1024px) {
+    .sc-col-3 {
+        flex: 0 0 30%;
+        max-width: 30%;
+    }
+    .sc-col-9,
+    .col-sm-9,
+    .col-lg-9 {
+        flex: 0 0 70%;
+        max-width: 70%;
+    }
+}
 
 /* Common Components (Bootstrap Replacement) */
 .btn {
