배경화면 preload 경고 문제 수정
cdn 이미지 경로를 http -> https로 수정했음.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,7 +22,7 @@ body {
     font-style: normal;
     font-synthesis: none;
     padding-bottom: 0;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.9)), url("http://sc1hub.cdn1.cafe24.com/star_full.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.9)), url("https://sc1hub.cdn1.cafe24.com/star_full.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
